config/wp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ports:
    - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ##
  # Create label selectors here
  ##
  template:
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
        ##
        # create resource limits here
        ##
    ##
    # define volume mounts here, be sure to reference
    # the PVC in your container spec
    ##
---
##
# Create persistant volume claim in this file
##
